fixing contrast issues

--- a/themes/hugo-theme-learn/static/css/theme-yaub.css
+++ b/themes/hugo-theme-learn/static/css/theme-yaub.css
@@ -257,9 +257,12 @@ pre .copy-to-clipboard:hover {
     margin-top: 0;
 }
 
+#TableOfContents > ul > li > a {
+    font-weight: normal;
+}
+
 #TableOfContents > ul > li > ul > li > a {
     color: var(--TOC-INACTIVE-color);
-    font-weight: bold;
 }
 
 #TableOfContents > ul > li > ul > li.active > a {
